--- a/index.html
+++ b/index.html
@@ -2,48 +2,69 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="robots" content="noindex, nofollow">
+  <meta name="googlebot" content="noindex, nofollow">
   <title>Melissa Bolick, DO Candidate</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');
     body {
-      font-family: sans-serif;
-      text-align: center;
-      padding: 3rem 1rem;
-      background: #f9f9f9;
+      font-family: 'Inter', system-ui, sans-serif;
+      background: linear-gradient(180deg, #fafafa 0%, #ffffff 100%);
       color: #333;
+      padding: 3rem 1rem;
+      margin: 0;
+    }
+    .container {
+      max-width: 480px;
+      margin: 0 auto;
+      text-align: center;
     }
     h1 {
+      font-size: 2rem;
       margin-bottom: 0.25rem;
     }
-    p.subtitle {
-      margin: 0;
+    .pronouns {
       font-size: 1rem;
+      font-weight: 400;
       color: #555;
     }
+    p.subtitle {
+      font-size: 1rem;
+      font-weight: 400;
+      color: #555;
+      margin: 0.5rem 0;
+    }
     .buttons {
-      margin: 2rem 0;
+      margin: 2.5rem 0;
     }
     a.button {
       display: inline-block;
-      margin: 0.5rem;
       padding: 0.75rem 1.5rem;
-      border-radius: 4px;
-      text-decoration: none;
-      font-weight: bold;
       background: #00563C;
       color: #fff;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: 500;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      transition: background 200ms ease-in-out;
+    }
+    a.button:hover {
+      background: #004533;
     }
   </style>
 </head>
 <body>
-  <h1>Melissa Bolick <small>(She/Her/Hers)</small></h1>
-  <p class="subtitle">DO Candidate ’26</p>
-  <p>Burrell College of Osteopathic Medicine<br>Las Cruces, NM</p>
+  <div class="container">
+    <h1>Melissa Bolick <span class="pronouns">(She/Her/Hers)</span></h1>
+    <p class="subtitle">DO Candidate ’26</p>
+    <p>Burrell College of Osteopathic Medicine<br>Las Cruces, NM</p>
 
-  <div class="buttons">
-    <a class="button" href="https://www.linkedin.com/in/melissabolick" target="_blank">
-      Connect on LinkedIn →
-    </a>
+    <div class="buttons">
+      <a class="button" href="https://www.linkedin.com/in/melissabolick" target="_blank">
+        Connect on LinkedIn →
+      </a>
+    </div>
   </div>
 </body>
 </html>
