--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     a.button {
       display: inline-block;
       padding: 0.75rem 1.5rem;
-      background: #00563C;
+      background: #0077B5; /* LinkedIn blue */
       color: #fff;
       border-radius: 6px;
       text-decoration: none;
@@ -50,14 +50,14 @@
       transition: background 200ms ease-in-out;
     }
     a.button:hover {
-      background: #004533;
+      background: #005582; /* Darker LinkedIn blue on hover */
     }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Melissa Bolick <span class="pronouns">(She/Her/Hers)</span></h1>
-    <p class="subtitle">DO Candidate ’26</p>
+    <p class="subtitle">DO Candidate ’26, Distinction in Anatomy</p>
     <p>Burrell College of Osteopathic Medicine<br>Las Cruces, NM</p>
 
     <div class="buttons">
