--- a/index.html
+++ b/index.html
@@ -7,58 +7,66 @@
   <title>Melissa Bolick, DO Candidate</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');
+    /* Use EB Garamond for a professional serif look */
+    @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&display=swap');
     body {
-      font-family: 'Inter', system-ui, sans-serif;
-      background: linear-gradient(180deg, #fafafa 0%, #ffffff 100%);
+      font-family: 'EB Garamond', serif;
+      background: #ffffff;
       color: #333;
-      padding: 3rem 1rem;
+      padding: 2rem 1rem;
       margin: 0;
     }
     .container {
       max-width: 480px;
       margin: 0 auto;
       text-align: center;
+      padding-top: 20vh;
     }
-    h1 {
+    h1.name {
       font-size: 2rem;
-      margin-bottom: 0.25rem;
+      margin: 0;
     }
-    .pronouns {
+    p.pronouns {
       font-size: 1rem;
-      font-weight: 400;
       color: #555;
+      margin: 0.25rem 0 1rem;
     }
     p.subtitle {
       font-size: 1rem;
-      font-weight: 400;
+      font-weight: 500;
+      color: #555;
+      margin: 0.5rem 0;
+    }
+    p.location {
+      font-size: 1rem;
       color: #555;
       margin: 0.5rem 0;
     }
     .buttons {
-      margin: 2.5rem 0;
+      margin: 2rem 0;
     }
     a.button {
       display: inline-block;
       padding: 0.75rem 1.5rem;
-      background: #0077B5; /* LinkedIn blue */
+      background: #0077B5;
       color: #fff;
       border-radius: 6px;
       text-decoration: none;
       font-weight: 500;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
       transition: background 200ms ease-in-out;
     }
     a.button:hover {
-      background: #005582; /* Darker LinkedIn blue on hover */
+      background: #005582;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Melissa Bolick <span class="pronouns">(She/Her/Hers)</span></h1>
-    <p class="subtitle">DO Candidate ’26, Distinction in Anatomy</p>
-    <p>Burrell College of Osteopathic Medicine<br>Las Cruces, NM</p>
+    <h1 class="name">Melissa Bolick</h1>
+    <p class="pronouns">She/Her/Hers</p>
+    <p class="subtitle">DO Candidate ’26</p>
+    <p class="location">Burrell College of Osteopathic Medicine<br>Las Cruces, NM</p>
 
     <div class="buttons">
       <a class="button" href="https://www.linkedin.com/in/melissabolick" target="_blank">
