--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
   <meta charset="utf-8">
   <meta name="robots" content="noindex, nofollow">
   <meta name="googlebot" content="noindex, nofollow">
+  <meta name="description" content="Melissa Bolick – DO Candidate ’26. Connect on LinkedIn.">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="icon" href="/favicon.ico">
   <title>Melissa Bolick, DO Candidate</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-    /* Use EB Garamond for a professional serif look */
     @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&display=swap');
     body {
       font-family: 'EB Garamond', serif;
@@ -58,6 +60,10 @@
     }
     a.button:hover {
       background: #005582;
+    }
+    a.button:focus {
+      outline: 2px solid #005582;
+      outline-offset: 2px;
     }
   </style>
 </head>
