--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="googlebot" content="noindex, nofollow">
   <meta name="description" content="Melissa Bolick – DO Candidate ’26. Connect on LinkedIn.">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="favicon.ico">
   <title>Melissa Bolick, DO Candidate</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
