--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="utf-8">
   <meta name="robots" content="noindex, nofollow">
   <meta name="googlebot" content="noindex, nofollow">
-  <meta name="description" content="Melissa Bolick – DO Candidate ’26. Connect on LinkedIn.">
+  <meta name="description" content="Melissa Bolick – DO Candidate ’26, trans-affirming OB/GYN advocate at Burrell COM. Connect on LinkedIn.">
+  <meta name="theme-color" content="#ffffff">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="favicon.ico">
+  <link rel="shortcut icon" href="favicon.ico">
   <title>Melissa Bolick, DO Candidate</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
@@ -44,6 +46,12 @@
       color: #555;
       margin: 0.5rem 0;
     }
+    p.tagline {
+      font-size: 0.9rem;
+      font-style: italic;
+      color: #666;
+      margin: 0.75rem 0 1.5rem;
+    }
     .buttons {
       margin: 2rem 0;
     }
@@ -71,11 +79,11 @@
   <div class="container">
     <h1 class="name">Melissa Bolick</h1>
     <p class="pronouns">She/Her/Hers</p>
-    <p class="subtitle">DO Candidate ’26</p>
+    <p class="subtitle">DO Candidate ’26, Distinction in Anatomy</p>
     <p class="location">Burrell College of Osteopathic Medicine<br>Las Cruces, NM</p>
-
+    <p class="tagline">Future OB/GYN physician advocating for trans‑affirming, justice‑centered reproductive care.</p>
     <div class="buttons">
-      <a class="button" href="https://www.linkedin.com/in/melissabolick" target="_blank">
+      <a class="button" href="https://www.linkedin.com/in/melissabolick" target="_blank" role="button" aria-label="Connect with Melissa Bolick on LinkedIn">
         Connect on LinkedIn →
       </a>
     </div>
