--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&display=swap');
     body {
       font-family: 'EB Garamond', serif;
-      background: #ffffff;
+      background: #f9f5f0;
       color: #333;
       padding: 2rem 1rem;
       margin: 0;
