--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="robots" content="noindex, nofollow">
   <meta name="googlebot" content="noindex, nofollow">
   <meta name="description" content="Melissa Bolick – DO Candidate ’26, trans-affirming OB/GYN advocate at Burrell COM. Connect on LinkedIn.">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#f9f5f0">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="icon" type="image/png" href="favicon.ico">
   <link rel="shortcut icon" href="favicon.ico">
