--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="robots" content="noindex, nofollow">
   <meta name="googlebot" content="noindex, nofollow">
-  <meta name="description" content="Melissa Bolick – DO Candidate ’26, trans-affirming OB/GYN advocate at Burrell COM. Connect on LinkedIn.">
+  <meta name="description" content="Melissa Bolick – DO Candidate ’26. Connect on LinkedIn.">
   <meta name="theme-color" content="#f9f5f0">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="icon" type="image/png" href="favicon.ico">
@@ -79,7 +79,7 @@
   <div class="container">
     <h1 class="name">Melissa Bolick</h1>
     <p class="pronouns">She/Her/Hers</p>
-    <p class="subtitle">DO Candidate ’26, Distinction in Anatomy</p>
+    <p class="subtitle">DO Candidate ’26</p>
     <p class="location">Burrell College of Osteopathic Medicine<br>Las Cruces, NM</p>
     <div class="buttons">
       <a class="button" href="https://www.linkedin.com/in/melissabolick" target="_blank" role="button" aria-label="Connect with Melissa Bolick on LinkedIn">
