--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <h1 class="name">Melissa Bolick</h1>
     <p class="pronouns">She/Her/Hers</p>
     <p class="subtitle">DO Candidate ’26</p>
-    <p class="location">Burrell College of Osteopathic Medicine<br>Las Cruces, NM</p>
+    <p class="location">Burrell College of Osteopathic Medicine<br>Southwest US</p>
     <div class="buttons">
       <a class="button" href="https://www.linkedin.com/in/melissabolick" target="_blank" role="button" aria-label="Connect with Melissa Bolick on LinkedIn">
         Connect on LinkedIn →
