--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
   <meta charset="utf-8">
+  <meta name="author" content="Melissa Bolick">
   <meta name="robots" content="noindex, nofollow">
   <meta name="googlebot" content="noindex, nofollow">
   <meta name="description" content="Melissa Bolick – DO Candidate ’26. Connect on LinkedIn.">
   <meta name="theme-color" content="#f9f5f0">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preload" href="https://fonts.gstatic.com/s/ebgaramond/v20/SlGGlZtgrQ4oU9MXoUzxf-cJ.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="icon" type="image/png" href="favicon.ico">
   <link rel="shortcut icon" href="favicon.ico">
   <title>Melissa Bolick, DO Candidate</title>
@@ -19,6 +21,7 @@
       color: #333;
       padding: 2rem 1rem;
       margin: 0;
+      line-height: 1.6;
     }
     .container {
       max-width: 480px;
@@ -46,18 +49,12 @@
       color: #555;
       margin: 0.5rem 0;
     }
-    p.tagline {
-      font-size: 0.9rem;
-      font-style: italic;
-      color: #666;
-      margin: 0.75rem 0 1.5rem;
-    }
     .buttons {
       margin: 2rem 0;
     }
     a.button {
       display: inline-block;
-      padding: 0.75rem 1.5rem;
+      padding: 1rem 2rem;
       background: #0077B5;
       color: #fff;
       border-radius: 6px;
@@ -78,11 +75,11 @@
 <body>
   <div class="container">
     <h1 class="name">Melissa Bolick</h1>
-    <p class="pronouns">She/Her/Hers</p>
-    <p class="subtitle">DO Candidate ’26</p>
+    <p class="pronouns">She/Her</p>
+    <p class="subtitle">DO Candidate ’26 | Aspiring OB/GYN Physician</p>
     <p class="location">Burrell College of Osteopathic Medicine<br>Southwest US</p>
     <div class="buttons">
-      <a class="button" href="https://www.linkedin.com/in/melissabolick" target="_blank" role="button" aria-label="Connect with Melissa Bolick on LinkedIn">
+      <a class="button" href="https://www.linkedin.com/in/melissabolick" target="_blank" aria-label="Connect with Melissa Bolick on LinkedIn">
         Connect on LinkedIn →
       </a>
     </div>
