--- a/index.html
+++ b/index.html
@@ -3,16 +3,24 @@
 <head>
   <meta charset="utf-8">
   <meta name="author" content="Melissa Bolick">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="description" content="Melissa Bolick – DO Candidate ’26. Connect on LinkedIn.">
   <meta name="robots" content="noindex, nofollow">
   <meta name="googlebot" content="noindex, nofollow">
-  <meta name="description" content="Melissa Bolick – DO Candidate ’26. Connect on LinkedIn.">
+  <meta name="bingbot" content="noindex, nofollow">
+  <meta name="slurp" content="noindex, nofollow">
+  <meta name="msnbot" content="noindex, nofollow">
+  <meta name="duckduckbot" content="noindex, nofollow">
+  <meta name="yandex" content="noindex, nofollow">
+  <meta name="baiduspider" content="noindex, nofollow">
+  <meta name="facebookexternalhit" content="noindex, nofollow">
+  <meta name="twitterbot" content="noindex, nofollow">
   <meta name="theme-color" content="#f9f5f0">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preload" href="https://fonts.gstatic.com/s/ebgaramond/v20/SlGGlZtgrQ4oU9MXoUzxf-cJ.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="icon" type="image/png" href="favicon.ico">
   <link rel="shortcut icon" href="favicon.ico">
   <title>Melissa Bolick, DO Candidate</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&display=swap');
     body {
