--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <h1 class="name">Melissa Bolick</h1>
     <p class="pronouns">She/Her</p>
     <p class="subtitle">DO Candidate ’26 | Aspiring OB/GYN Physician</p>
-    <p class="location">Burrell College of Osteopathic Medicine<br>Southwest US</p>
+    <p class="location">Burrell College of Osteopathic Medicine</p>
     <div class="buttons">
       <a class="button" href="https://www.linkedin.com/in/melissabolick" target="_blank" aria-label="Connect with Melissa Bolick on LinkedIn">
         Connect on LinkedIn →
