--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     <p class="subtitle">DO Candidate ’26</p>
     <p class="subtitle">Aspiring OB/GYN Physician</p>
     <p class="location">Burrell College of Osteopathic Medicine<br>Las Cruces, NM</p>
+    <p class="tagline">Committed to affirming, justice-centered reproductive care.</p>
     <div class="buttons">
       <a class="button" href="https://www.linkedin.com/in/melissabolick" target="_blank" aria-label="Connect with Melissa Bolick on LinkedIn">
         Connect on LinkedIn →
