--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&display=swap');
     body {
       font-family: 'EB Garamond', serif;
-      background: #f9f5f0;
+      background: #faf8f5;
       color: #333;
       padding: 2rem 1rem;
       margin: 0;
