--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="baiduspider" content="noindex, nofollow, noarchive">
   <meta name="facebookexternalhit" content="noindex, nofollow, noarchive">
   <meta name="twitterbot" content="noindex, nofollow, noarchive">
-  <meta name="theme-color" content="#f9f5f0">
+  <meta name="theme-color" content="#faf8f5">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preload" href="https://fonts.gstatic.com/s/ebgaramond/v20/SlGGlZtgrQ4oU9MXoUzxf-cJ.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="icon" type="image/png" href="favicon.ico">
@@ -56,6 +56,12 @@
       font-size: 1rem;
       color: #555;
       margin: 0.5rem 0;
+    }
+    p.tagline {
+      font-size: 0.85rem;
+      font-style: italic;
+      color: #555;
+      margin: 1.5rem 0 2rem;
     }
     .buttons {
       margin: 2rem 0;
