--- a/index.html
+++ b/index.html
@@ -15,14 +15,46 @@
   <meta name="baiduspider" content="noindex, nofollow, noarchive">
   <meta name="facebookexternalhit" content="noindex, nofollow, noarchive">
   <meta name="twitterbot" content="noindex, nofollow, noarchive">
+  <meta name="referrer" content="no-referrer">
+  <meta name="format-detection" content="telephone=no, email=no">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline'; font-src 'self';">
+  <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
   <meta name="theme-color" content="#faf8f5">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preload" href="https://fonts.gstatic.com/s/ebgaramond/v20/SlGGlZtgrQ4oU9MXoUzxf-cJ.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="icon" type="image/png" href="favicon.ico">
   <link rel="shortcut icon" href="favicon.ico">
+
   <title>Melissa Bolick, DO Candidate</title>
+
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&display=swap');
+    @font-face {
+      font-family: 'EB Garamond';
+      src: url('/fonts/eb-garamond-v30-latin-regular.woff2') format('woff2');
+      font-weight: 400;
+      font-style: normal;
+      font-display: swap;
+    }
+    @font-face {
+      font-family: 'EB Garamond';
+      src: url('/fonts/eb-garamond-v30-latin-italic.woff2') format('woff2');
+      font-weight: 400;
+      font-style: italic;
+      font-display: swap;
+    }
+    @font-face {
+      font-family: 'EB Garamond';
+      src: url('/fonts/eb-garamond-v30-latin-500.woff2') format('woff2');
+      font-weight: 500;
+      font-style: normal;
+      font-display: swap;
+    }
+    @font-face {
+      font-family: 'EB Garamond';
+      src: url('/fonts/eb-garamond-v30-latin-500italic.woff2') format('woff2');
+      font-weight: 500;
+      font-style: italic;
+      font-display: swap;
+    }
+
     body {
       font-family: 'EB Garamond', serif;
       background: #faf8f5;
@@ -95,7 +127,10 @@
     <p class="location">Burrell College of Osteopathic Medicine<br>Las Cruces, NM</p>
     <p class="tagline">Committed to affirming, justice-centered reproductive care.</p>
     <div class="buttons">
-      <a class="button" href="https://www.linkedin.com/in/melissabolick" target="_blank" aria-label="Connect with Melissa Bolick on LinkedIn">
+      <a class="button" href="https://www.linkedin.com/in/melissabolick" 
+         target="_blank" 
+         rel="noopener noreferrer" 
+         aria-label="Connect with Melissa Bolick on LinkedIn">
         Connect on LinkedIn →
       </a>
     </div>
