--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="author" content="Melissa Bolick">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="Melissa Bolick – DO Candidate ’26. Connect on LinkedIn.">
+
   <meta name="robots" content="noindex, nofollow, noarchive">
   <meta name="googlebot" content="noindex, nofollow, noarchive">
   <meta name="bingbot" content="noindex, nofollow, noarchive">
@@ -17,110 +18,18 @@
   <meta name="twitterbot" content="noindex, nofollow, noarchive">
   <meta name="referrer" content="no-referrer">
   <meta name="format-detection" content="telephone=no, email=no">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self'; script-src 'none'; connect-src 'self'; base-uri 'self'; form-action 'self';">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self'; font-src 'self'; img-src 'self'; script-src 'none'; connect-src 'self'; base-uri 'self'; form-action 'self';">
   <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
   <meta name="theme-color" content="#faf8f5">
-  <link rel="icon" type="image/png" href="favicon.ico">
-  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="preload" href="/fonts/eb-garamond-v30-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/fonts/eb-garamond-v30-latin-italic.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/fonts/eb-garamond-v30-latin-500.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/fonts/eb-garamond-v30-latin-500italic.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/styles.css" as="style">
+  <link rel="stylesheet" href="/styles.css">
 
   <title>Melissa Bolick, DO Candidate</title>
-
-  <style>
-    @font-face {
-      font-family: 'EB Garamond';
-      src: url('/fonts/eb-garamond-v30-latin-regular.woff2') format('woff2');
-      font-weight: 400;
-      font-style: normal;
-      font-display: swap;
-    }
-    @font-face {
-      font-family: 'EB Garamond';
-      src: url('/fonts/eb-garamond-v30-latin-italic.woff2') format('woff2');
-      font-weight: 400;
-      font-style: italic;
-      font-display: swap;
-    }
-    @font-face {
-      font-family: 'EB Garamond';
-      src: url('/fonts/eb-garamond-v30-latin-500.woff2') format('woff2');
-      font-weight: 500;
-      font-style: normal;
-      font-display: swap;
-    }
-    @font-face {
-      font-family: 'EB Garamond';
-      src: url('/fonts/eb-garamond-v30-latin-500italic.woff2') format('woff2');
-      font-weight: 500;
-      font-style: italic;
-      font-display: swap;
-    }
-
-    body {
-      font-family: 'EB Garamond', 'Garamond', 'Georgia', serif;
-      background: #faf8f5;
-      color: #333;
-      padding: 2rem 1rem;
-      margin: 0;
-      line-height: 1.6;
-    }
-    .container {
-      max-width: 480px;
-      margin: 0 auto;
-      text-align: center;
-      padding-top: 20vh;
-    }
-    h1.name {
-      font-size: 2rem;
-      margin: 0;
-    }
-    p.pronouns {
-      font-size: 1rem;
-      color: #555;
-      margin: 0.25rem 0 1rem;
-    }
-    p.subtitle {
-      font-size: 1rem;
-      font-weight: 500;
-      color: #555;
-      margin: 0.4rem 0;
-    }
-    p.location {
-      font-size: 1rem;
-      color: #555;
-      margin: 0.5rem 0;
-    }
-    p.tagline {
-      font-size: 0.85rem;
-      font-style: italic;
-      color: #555;
-      margin: 1.5rem 0 2rem;
-    }
-    .buttons {
-      margin: 2rem 0;
-    }
-    a.button {
-      display: inline-block;
-      padding: 1rem 2rem;
-      background: #0077B5;
-      color: #fff;
-      border-radius: 6px;
-      text-decoration: none;
-      font-weight: 500;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      transition: background 200ms ease-in-out;
-    }
-    a.button:hover {
-      background: #005582;
-    }
-    a.button:focus {
-      outline: 2px solid #005582;
-      outline-offset: 2px;
-    }
-  </style>
 </head>
 <body>
   <div class="container">
