--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
 <body>
   <div class="container">
     <h1 class="name">Melissa Bolick</h1>
-    <p class="pronouns">She/Her</p>
     <p class="subtitle">DO Candidate ’26</p>
     <p class="subtitle">Aspiring OB/GYN Physician</p>
     <p class="location">Burrell College of Osteopathic Medicine</p>
-    <p class="tagline">Committed to affirming, justice-centered reproductive care.</p>
+    <p class="tagline">Focused on equitable, evidence-based, and patient-centered reproductive healthcare.</p>
     <div class="buttons">
       <a class="button" href="https://www.linkedin.com/in/melissabolick" 
          target="_blank" 
